--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/ScoldingTopic/ScoldingTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/ScoldingTopic/ScoldingTopicUserControl.xaml
@@ -1,13 +1,13 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.HungryTopic.HungryTopicUserControl"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.ScoldingTopic.ScoldingTopicUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:hungryTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.HungryTopic"
+             xmlns:scoldingTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.ScoldingTopic"
              Height="554"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=hungryTopic:HungryTopicViewModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance Type=scoldingTopic:ScoldingTopicViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -69,7 +69,7 @@
                                             Content="📖"
                                             Command="{Binding SpeakWikiTextCommand}">
                                         <Button.ToolTip>
-                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Ask shellmon to explain the hungry condition again" />
+                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Ask shellmon to explain scolding again" />
                                         </Button.ToolTip>
                                     </Button>
                                 </Grid>
@@ -96,7 +96,7 @@
                 <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
                         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10,0" Background="{StaticResource DefaultBackGroundColor}">
-                            <StackPanel >
+                            <StackPanel>
                                 <Label VerticalAlignment="Top" Height="40" Width="120" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
                                     MORE INFO
                                 </Label>
@@ -105,21 +105,10 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Food"
-                                        Command="{Binding OpenGuideFoodChapterCommand}">
+                                        Content="Guide: Scolding"
+                                        Command="{Binding OpenGuideScoldingChapterCommand}">
                                     <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Food chapter of the guide" />
-                                    </Button.ToolTip>
-                                </Button>
-
-                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
-                                        Style="{StaticResource DefaultButtonStyle}"
-                                        Margin="0,0, 0, 5"
-                                        Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Hungry"
-                                        Command="{Binding OpenGuideHungryChapterCommand}">
-                                    <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Hungry chapter of the guide" />
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Scolding chapter of the guide" />
                                     </Button.ToolTip>
                                 </Button>
                             </StackPanel>
@@ -129,23 +118,12 @@
             </Border>
 
             <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 15, 15, 15">
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" >
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0">
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="286" Height="202" Source="Media/hungry-condition-screen.jpg" Stretch="UniformToFill">
+                        <Image Width="226" Height="202" Source="/Images/Icons/Menu/menu.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakHungerConditionScreenCommand}" />
-                                </b:EventTrigger>
-                            </b:Interaction.Triggers>
-                        </Image>
-                    </Border>
-                </Border>
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0" >
-                    <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="270" Height="202" Source="Media/hungry-condition-overworld.jpg" Stretch="UniformToFill">
-                            <b:Interaction.Triggers>
-                                <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakHungerConditionOverworldCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakScoldingMenuActionCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
