--- a/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
@@ -1,20 +1,20 @@
 <baseClasses:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.AboutAndCredits.AboutAndCreditsWindow"
-                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                          xmlns:system="clr-namespace:System;assembly=System.Runtime"
-                          xmlns:aboutAndCredits="clr-namespace:DigimonWorld.Frontend.WPF.Windows.AboutAndCredits"
-                          xmlns:baseClasses="clr-namespace:DigimonWorld.Frontend.WPF.Windows.BaseClasses"
-                          mc:Ignorable="d"
-                          d:DataContext="{d:DesignInstance Type=aboutAndCredits:AboutAndCreditsWindowViewModel, IsDesignTimeCreatable=True}"
-                          Title="Configuration"
-                          ResizeMode="NoResize"
-                          SizeToContent="WidthAndHeight"
-                          WindowStyle="None"
-                          AllowsTransparency="True"
-                          Background="Transparent"
-                          WindowStartupLocation="Manual">
+                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                              xmlns:system="clr-namespace:System;assembly=System.Runtime"
+                              xmlns:aboutAndCredits="clr-namespace:DigimonWorld.Frontend.WPF.Windows.AboutAndCredits"
+                              xmlns:baseClasses="clr-namespace:DigimonWorld.Frontend.WPF.Windows.BaseClasses"
+                              mc:Ignorable="d"
+                              d:DataContext="{d:DesignInstance Type=aboutAndCredits:AboutAndCreditsWindowViewModel, IsDesignTimeCreatable=True}"
+                              Title="Configuration"
+                              ResizeMode="NoResize"
+                              SizeToContent="WidthAndHeight"
+                              WindowStyle="None"
+                              AllowsTransparency="True"
+                              Background="Transparent"
+                              WindowStartupLocation="Manual">
 
     <baseClasses:BaseDialogWindow.Resources>
         <ResourceDictionary>
@@ -58,6 +58,7 @@
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
+                                <RowDefinition Height="25" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -119,13 +120,16 @@
                                     HorizontalAlignment="Center"
                                     Height="{StaticResource DefaultButtonHeight}"
                                     Width="{StaticResource WindowButtonWidth}"
-                                    Margin="0, 15, 0, 10"
+                                    Margin="0, 15, 0, 5"
                                     Content="Close"
                                     Command="{Binding CloseWindowCommand}">
                                 <Button.ToolTip>
                                     <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Exit this window (hotkey: ESC)" />
                                 </Button.ToolTip>
                             </Button>
+
+                            <Label Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Style="{StaticResource DefaultLabelStyle}"
+                                   Content="© 2026 Ginoshie - Non-commercial use only." />
                         </Grid>
                     </Border>
                 </Border>
